# tooling-postgres-cdc

./: .env  README.md  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: checks.yaml
src/: database.py  loggers.py  main.py  testing.py
tests/: test_database.py
